--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -103,6 +103,11 @@ html, body {
 }
 
 
+.btn-bar {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .btn {
   font-family: 'Open Sans', sans-serif;
   width: 100px;
