--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <app-nav [config]="{title: 'Home', navButton: 'menu'}"></app-nav>
 <div class="container">
   <div class="lists">
-    <div (click)="onListClick(list.id)" *ngFor="let list of userList" long-press (onLongPress)="onCardLongPress(list)" class="card">
+    <div (click)="onListClick(list)" *ngFor="let list of userLists" long-press (onLongPress)="onCardLongPress(list)" class="card">
       <div class="info">
         <h2 class="title">{{list.title}}</h2>
         <div class="description">{{list.description}}</div>
