--- a/src/app/common/components/item/item.component.scss
+++ b/src/app/common/components/item/item.component.scss
@@ -5,6 +5,7 @@
   border-radius: 10px;
   padding: 15px;
   margin-bottom: 5px;
+  cursor: pointer;
 
   .quantity {
     display: flex;
@@ -27,7 +28,7 @@
     }
   }
 
-  .status {
+  .checkbox {
     width: 25px;
   }
 }
