--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -1,11 +1,17 @@
 <app-nav (buttonClick)="onNavButtonClick($event)"
          [config]="navConfig"></app-nav>
 <div class="container">
+  <div class="btn-bar">
+    <button (click)="onClearListClick()" class="btn btn-outline" type="button">Clear list</button>
+  </div>
   <app-tabs (tabChange)="onTabChanged($event)" [tabs]="tabs"></app-tabs>
-  <div *ngFor="let category of categories">
+  <div *ngFor="let category of categories; let i = index">
     <h2>{{category.title}}</h2>
     <div *ngFor="let item of items">
-      <app-item *ngIf="item.category_id === category.id" (itemLongPressed)="onItemLongPress($event)" [item]="item" (itemStatusChanged)="updateItemStatus($event)"></app-item>
+      <app-item (itemLongPressed)="onItemLongPress($event)"
+                (itemStatusChanged)="updateItemStatus($event)"
+                *ngIf="item.category_id === category.id"
+                [item]="item"></app-item>
     </div>
   </div>
 </div>
